# wync

./: .clang-format  .gitignore  LICENSE  Makefile  buffer.h  macro_types.h  meson.build  shell.nix  wync.h  wync_clock.h  wync_debug.h  wync_flow.h  wync_init.h  wync_input.h  wync_join.h  wync_lerp.h  wync_packet_util.c  wync_packet_util.h  wync_packets.h  wync_prop.h  wync_spawn.h  wync_stat.c  wync_stat.h  wync_state_send.h  wync_state_set.h  wync_state_store.h  wync_throttle.h  wync_tick_collection.h  wync_track.h  wync_typedef.h  wync_wrapper.h  wync_wrapper_util.h  wync_xtrap.h
.github/workflows/: test.yml
containers/: da.h  fifomap.h  fiforing.h  map.h  map_generic.h  ringbuffer.h
lib/: log.h
src/: buffer.h  wync_actions_and_events_consumed.c  wync_clock.c  wync_debug.c  wync_delta_sync.c  wync_event_utils.c  wync_flow.c  wync_init.c  wync_input.c  wync_join.c  wync_lerp.c  wync_packet_util.c  wync_private.h  wync_prop.c  wync_spawn.c  wync_stat.c  wync_state_send.c  wync_state_set.c  wync_state_store.c  wync_throttle.c  wync_tick_collection.c  wync_timewarp.c  wync_track.c  wync_wrapper.h  wync_wrapper_util.c  wync_xtrap.c
src/lib/: log.h
test/: common.h  simpletest.h  tests.c
